; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mmc/card/extr_sdio_uart.c_sdio_uart_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mmc/card/extr_sdio_uart.c_sdio_uart_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sdio_func = type { i32 }
%struct.sdio_uart_port = type { i32 }

@sdio_uart_tty_driver = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sdio_func*)* @sdio_uart_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sdio_uart_remove(%struct.sdio_func* %0) #0 {
  %2 = alloca %struct.sdio_func*, align 8
  %3 = alloca %struct.sdio_uart_port*, align 8
  store %struct.sdio_func* %0, %struct.sdio_func** %2, align 8
  %4 = load %struct.sdio_func*, %struct.sdio_func** %2, align 8
  %5 = call %struct.sdio_uart_port* @sdio_get_drvdata(%struct.sdio_func* %4)
  store %struct.sdio_uart_port* %5, %struct.sdio_uart_port** %3, align 8
  %6 = load i32, i32* @sdio_uart_tty_driver, align 4
  %7 = load %struct.sdio_uart_port*, %struct.sdio_uart_port** %3, align 8
  %8 = getelementptr inbounds %struct.sdio_uart_port, %struct.sdio_uart_port* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @tty_unregister_device(i32 %6, i32 %9)
  %11 = load %struct.sdio_uart_port*, %struct.sdio_uart_port** %3, align 8
  %12 = call i32 @sdio_uart_port_remove(%struct.sdio_uart_port* %11)
  ret void
}

declare dso_local %struct.sdio_uart_port* @sdio_get_drvdata(%struct.sdio_func*) #1

declare dso_local i32 @tty_unregister_device(i32, i32) #1

declare dso_local i32 @sdio_uart_port_remove(%struct.sdio_uart_port*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
